...
    <string name="confirm_password">Confirm Password</string>
    <string name="join_us">Join Us</string>
    <string name="back">Back</string>
    <string name="next">Next</string>
    <string name="gad7_description">This is a short 7 questions that measures severity of anxiety. Please read each statement and select the choice which indicates how much the statement applied to you over the past 2 weeks.</string>
    <string name="socio_description">Please fill in the form with your socio-demographic information so we can provide you more accurate results.</string>
    <string name="age">Age</string>
    <string name="martial_status">Martial Status</string>
    <string name="ex_diabetes">ex; Diabetes</string>
    <string name="chronic_diseases">Chronic Diseases</string>
    <string name="sr">SR</string>
    <string name="ex_2000" translatable="false">ex; 2000</string>
    <string name="monthly_income">Monthly Income</string>
    <string name="kg">kg</string>
    <string name="weight">Weight</string>
    <string name="ex_55" translatable="false">ex; 55</string>
    <string name="cm">cm</string>
    <string name="ex_160" translatable="false">ex; 160</string>
    <string name="height">Height</string>
    <string name="ex_21" translatable="false">ex; 21</string>
    <string name="cigarette_smoker">Cigarette Smoker</string>
    <string name="employment_status">Employment Status</string>
    <string name="gad_7_scale">GAD-7 Scale</string>
    <string name="feeling_nervous_anxious_or_on_edge">Feeling nervous, anxious, or on edge</string>
    <string name="not_being_able_to_stop_or_control_worrying">Not being able to stop or control worrying</string>
...
    <string-array name="yes_no">
        <item>@string/yes</item>
        <item>@string/no</item>

    </string-array>

    <string-array name="gender">
        <item>@string/male</item>
        <item>@string/female</item>

    </string-array>

    <string-array name="martial_status">
        <item>@string/single</item>
        <item>@string/married</item>
        <item>@string/widowed</item>
        <item>@string/divorced</item>

    </string-array>

    <!-- Martial Status -->
...
    <string name="NewTD">New Draft</string>
    <string name="TitleTD">Add Title</string>
    <string name="SubTD">What Do You Feel?</string>
    <string name="SaveTD">Save</string>
    <string name="TDSavedSuccess">The Text Draft Saved Successfully</string>
    <string name="TDSavedFialed">The Text Draft Did not Saved, Try Again</string>
    <string name="EmptyFields">All Fields Required</string>

    <!-- Edit Text Draft Page -->
    <string name="EditTD">Edit Draft</string>
    <string name="SaveChangesTD">Save Changes</string>
    <string name="DeleteTD">Delete Draft</string>
    <string name="DeleteMessageTD">Are you sure you want to delete this Draft ? </string>
...
    <string name="AccDeletedSuccess">Your Account Deleted Successfully</string>
    <string name="AccDeletedFialed">Your Account Did not Deleted, Try Again</string>


    <!-- Edit Socio Page -->
    <string name="Socio">Edit Socio-demographic</string>
    <string name="NotCorrectAge">Please Enter Valid Age Value Between 5 to 110 Years Old</string>
    <string name="NotCorrectHeight">Please Enter Valid Height Value Between 50 to 300 CM</string>
    <string name="NotCorrectWeight">Please Enter Valid Weight Value Between 20 to 300 KG</string>
    <string name="NotCorrectMI">Please Enter Valid Monthly Income Value should be no more than 5000000</string>
    <string name="NotCorrectCD">Only Letters Accepted in Chronic Disease</string>
    <string name="SocioInfoUpdateSuccess">Your Socio Information Updated Successfully</string>
    <string name="SocioInfoUpdateFialed">Your Socio Information did not Updated, Try Again</string>
    <string name="SaveSocioUpdate">Save</string>

    <!-- Patient Profile Page -->
    <string name="VervEmail">To Help Ensure Your Accounts Security Please Verify Your Email.</string>
    <string name="VervEmailSuccess">Email Was Sent For Verification</string>
    <string name="VervEmailFialed">Email Did Not Sent, Try Again</string>
...
