...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".controller.main.profile.EditSocio"
    android:id="@+id/EditSocio">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/head"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
...
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/backButton"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
...
    </androidx.constraintlayout.widget.ConstraintLayout>


    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/head">

        <LinearLayout
            android:id="@+id/mainLayoutQs"
...
                    android:gravity="center_vertical"
                    android:text="@string/monthly_income"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <EditText
                    android:id="@+id/income"
                    android:layout_width="120dp"
                    android:layout_height="35dp"
                    android:padding="5dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:inputType="number" />
...
                    android:text="@string/chronic_diseases"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <EditText
                    android:id="@+id/chronic"
                    android:layout_width="120dp"
                    android:padding="5dp"
                    android:layout_height="35dp"
                    android:background="@drawable/custom_edit_text"
                    android:ems="10"
                    android:inputType="textPersonName" />
...
                    android:text="@string/employment_status"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/employee"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10" />


            </LinearLayout>
...
                    android:text="@string/cigarette_smoker"
                    android:textColor="@color/black"
                    android:textSize="18sp" />


                <Spinner
                    android:id="@+id/smoke"
                    android:layout_width="120dp"
                    android:layout_height="match_parent"
                    android:ems="10" />


            </LinearLayout>
...
